[gd_scene load_steps=17 format=3 uid="uid://gqdstw6n42rk"]

[ext_resource type="Script" uid="uid://e256etg8nsqi" path="res://Scenes/Track/Track.gd" id="1_0do6f"]
[ext_resource type="Texture2D" uid="uid://2msta3ane5h5" path="res://Assets/Images/WaterBg.png" id="1_okhpi"]
[ext_resource type="Texture2D" uid="uid://xvjcmagfi6d2" path="res://Assets/Images/track-craft-professional-1766859469981.png" id="2_0ld5s"]
[ext_resource type="PackedScene" uid="uid://dknnoxlghw3qv" path="res://Scenes/TrackProcessor/TrackProcessor.tscn" id="5_2lgdg"]
[ext_resource type="PackedScene" uid="uid://1olejsy54lgw" path="res://Scenes/OilDropper/OilDropper.tscn" id="5_vfgym"]
[ext_resource type="Texture2D" uid="uid://dec3bup5l0rha" path="res://Assets/Images/FinishLine.png" id="6_wtm8k"]
[ext_resource type="PackedScene" uid="uid://34fniyu6cog" path="res://Scenes/VerificationVerification/Verification.tscn" id="7_6d5m8"]
[ext_resource type="PackedScene" uid="uid://dj72m1ivs772h" path="res://Scenes/Car/PlayerCar.tscn" id="8_2lgdg"]
[ext_resource type="PackedScene" uid="uid://d06t4uidc0jf8" path="res://Scenes/RaceController/RaceController.tscn" id="8_pxc04"]
[ext_resource type="PackedScene" uid="uid://djyaytjfa6yp5" path="res://Scenes/Car/CpuCar.tscn" id="9_iwdkm"]
[ext_resource type="Texture2D" uid="uid://pndhsqg7v7iu" path="res://Assets/Images/CarBlue.png" id="10_pptq5"]
[ext_resource type="Texture2D" uid="uid://dlry4iqrl31mt" path="res://Assets/Images/CarGreen.png" id="11_m1acf"]
[ext_resource type="Texture2D" uid="uid://dr8u06xrl4yv6" path="res://Assets/Images/CarPurple.png" id="12_cc6kv"]
[ext_resource type="PackedScene" uid="uid://bx0trj8wkc4gu" path="res://Scenes/Countdown/Countdown.tscn" id="14_cc6kv"]

[sub_resource type="Curve2D" id="Curve2D_0do6f"]
_data = {
"points": PackedVector2Array(-140.8, -23.1, 178.20001, 52.800003, 1110, 547, -72.6, 59.4, 72.6, -59.4, 1555, 645, -8.052551, 152.99846, 8.052551, -152.99846, 1626, 198, 69.20923, 114.37883, -95.60923, -135.27882, 1561, -211, 259.6, -138.6, -259.6, 138.6, 864, 150, 44, 61.600002, -44, -61.600002, 442, 134, 31.900002, 71.5, -31.900002, -71.5, 406, -141, 57.199997, -80.3, -81.4, 79.200005, -155, -135, -35.2, -75.9, 14.3, 48.4, -202, 259, -5.5, -48.4, 5.5, 48.4, -106, 412, -44, -99, 47.3, 48.399998, -52, 621, -78.100006, 48.4, 44, -42.9, 106, 615, -83.6, 12.1, 83.6, -12.1, 341, 510, 0, 0, 0, 0, 1110, 547)
}
point_count = 14

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6d5m8"]
size = Vector2(128.69244, 20)

[node name="Track" type="Node"]
script = ExtResource("1_0do6f")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(570, 328)
scale = Vector2(1.1, 1.1)
texture = ExtResource("1_okhpi")

[node name="TrackImage" type="Sprite2D" parent="."]
position = Vector2(732, 209)
scale = Vector2(2, 2)
texture = ExtResource("2_0ld5s")

[node name="TrackCollision" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="TrackCollision"]
position = Vector2(13, 1)
polygon = PackedVector2Array(-114, -112, -141, -66, -138, 222, -118, 255, -48, 316, -9, 409, -12, 520, -10, 571, 12, 603, 37, 602, 117, 529, 185, 464, 334, 418, 595, 437, 636, 448, 1043, 474, 1090, 466, 1486, 608, 1525, 608, 1544, 575, 1542, -127, 1525, -175, 1486, -185, 1441, -166, 1302.3921, -71.10336, 1280, -67, 1077, 90, 955, 194, 820, 263, 710, 292, 491, 296, 390, 266, 327, 178, 325, 46, 374, -80, 346, -125, -80, -124)

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="TrackCollision"]
polygon = PackedVector2Array(-403, -724, 2193, -752, 2299, 1132, -812, 1183, -637, -765, -206, -269, -303, -156, -287, 108, -283, 256, -197, 367, -137, 427, -133, 487, -148, 558, -157, 618, -99, 729, 26, 764, 169, 708, 266, 603, 332, 577, 570, 581, 1076, 611, 1520, 777, 1623, 753, 1691, 689, 1715, 584, 1700, 438, 1710, -150, 1691, -250, 1640, -319, 1560, -355, 1475, -355, 1372, -287, 834, 97, 714, 131, 602, 144, 529, 133, 489, 80, 506, 20, 538, -51, 549, -143, 508, -235, 390, -291, 257, -289, -202, -273, -487, -628)

[node name="TrackPath" type="Path2D" parent="."]
position = Vector2(12, 0)
curve = SubResource("Curve2D_0do6f")

[node name="OilDropper" parent="TrackPath" node_paths=PackedStringArray("oil_container") instance=ExtResource("5_vfgym")]
position = Vector2(1110, 547)
rotation = 0.28805545
debug = false
oil_container = NodePath("../../OilContainer")

[node name="TrackProcessor" parent="TrackPath" instance=ExtResource("5_2lgdg")]
position = Vector2(1110, 547)
rotation = 0.28805545

[node name="OilContainer" type="Node" parent="."]

[node name="StartLine" type="Area2D" parent="."]
position = Vector2(1143.0001, 555)
rotation = -1.2456477
collision_layer = 0

[node name="Sprite2D" type="Sprite2D" parent="StartLine"]
texture = ExtResource("6_wtm8k")

[node name="CollisionShape2D" type="CollisionShape2D" parent="StartLine"]
scale = Vector2(1.0000001, 1.0000001)
shape = SubResource("RectangleShape2D_6d5m8")

[node name="VerificationsHolder" type="Node" parent="."]

[node name="Verification" parent="VerificationsHolder" instance=ExtResource("7_6d5m8")]
position = Vector2(1624, 439)

[node name="Verification2" parent="VerificationsHolder" instance=ExtResource("7_6d5m8")]
position = Vector2(415, 42)

[node name="Verification3" parent="VerificationsHolder" instance=ExtResource("7_6d5m8")]
position = Vector2(-212, 164)

[node name="CarsHolder" type="Node" parent="."]

[node name="PlayerCar" parent="CarsHolder" instance=ExtResource("8_2lgdg")]
position = Vector2(1019, 516)
car_name = "Jabba"

[node name="CpuCar" parent="CarsHolder" instance=ExtResource("9_iwdkm")]
position = Vector2(1016, 562)
debug = true
car_texture = ExtResource("10_pptq5")

[node name="CpuCar2" parent="CarsHolder" instance=ExtResource("9_iwdkm")]
position = Vector2(1076, 525)
debug = true
max_top_speed_limit = 320.0
min_top_speed_limit = 250.0
car_texture = ExtResource("11_m1acf")
car_name = "Fred"

[node name="CpuCar3" parent="CarsHolder" instance=ExtResource("9_iwdkm")]
position = Vector2(1067, 572)
debug = true
max_top_speed_limit = 260.0
min_top_speed_limit = 200.0
car_texture = ExtResource("12_cc6kv")
car_name = "Flossy"

[node name="RaceController" parent="." instance=ExtResource("8_pxc04")]

[node name="WaypointsHolder" type="Node" parent="."]

[node name="UiCanvas" type="CanvasLayer" parent="."]

[node name="Countdown" parent="UiCanvas" instance=ExtResource("14_cc6kv")]

[connection signal="area_entered" from="TrackCollision" to="." method="_on_track_collision_area_entered"]
[connection signal="area_entered" from="StartLine" to="." method="_on_start_line_area_entered"]
